Fix animation on iOS

--- a/src/scripts/components/exercise/exercise-screen.scss
+++ b/src/scripts/components/exercise/exercise-screen.scss
@@ -44,13 +44,13 @@
       &.animate-bounce-in {
         animation: bounce-in;
         animation-delay: 10ms;
-        animation-duration: 1s;
+        animation-duration: 10s;
         transform-origin: center bottom
       }
 
       &.animate-bounce-out {
         animation: bounce-out;
-        animation-duration: 0.75s;
+        animation-duration: 10.75s;
         transform-origin: center bottom
       }
     }
@@ -196,16 +196,19 @@
 
     75% {
       animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+      opacity: 1;
       transform: translate3d(0, -0.75rem, 0) scaleY(0.95);
     }
 
     90% {
       animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+      opacity: 1;
       transform: translate3d(0, 0.25rem, 0) scaleY(0.985);
     }
 
     100% {
       animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+      opacity: 1;
       transform: translate3d(0, 0, 0);
     }
   }
@@ -213,16 +216,19 @@
   @keyframes bounce-out {
     0% {
       animation-timing-function: cubic-bezier(0.355, 0.61, 0.215, 1);
+      opacity: 1;
       transform: translate3d(0, 0, 0);
     }
 
     10% {
       animation-timing-function: cubic-bezier(0.355, 0.61, 0.215, 1);
+      opacity: 1;
       transform: translate3d(0, 0.25rem, 0) scaleY(0.985);
     }
 
     25% {
       animation-timing-function: cubic-bezier(0.355, 0.61, 0.215, 1);
+      opacity: 1;
       transform: translate3d(0, -0.75rem, 0) scaleY(0.95);
     }
 
